RESOLVED FIXED Bug 152705
FTL B3 should do the ArithSub binary snippet
https://bugs.webkit.org/show_bug.cgi?id=152705
Summary FTL B3 should do the ArithSub binary snippet
Filip Pizlo
Reported 2016-01-04 12:10:07 PST
Gotta start somewhere.
Attachments
the patch (9.48 KB, patch)
2016-01-04 12:32 PST, Filip Pizlo
no flags
the patch (9.48 KB, patch)
2016-01-04 12:32 PST, Filip Pizlo
no flags
the patch (8.90 KB, patch)
2016-01-04 12:33 PST, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2016-01-04 12:27:10 PST
It turns out that the ArithSub DFG/FTL snippets are totally busted even for the simplest of test cases. See: https://bugs.webkit.org/show_bug.cgi?id=152708
Filip Pizlo
Comment 2 2016-01-04 12:32:21 PST
Created attachment 268217 [details] the patch
Filip Pizlo
Comment 3 2016-01-04 12:32:53 PST
Created attachment 268218 [details] the patch
Filip Pizlo
Comment 4 2016-01-04 12:33:43 PST
Created attachment 268219 [details] the patch
WebKit Commit Bot
Comment 5 2016-01-04 12:35:08 PST
Attachment 268219 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:7410: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:7424: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 6 2016-01-04 12:51:54 PST
Note You need to log in before you can comment on or make changes to this bug.